# sentry-kubernetes

./: .dockerignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: build-chart.yaml  build.yaml  tests.yaml
chart/: Chart.yaml  README.md  values.yaml
chart/templates/: deployment.yaml
src/: main.rs  processor.rs  sentry_event.rs
