[package]
name = "sentry-kubernetes"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
getopts = "0.2"
futures = "0.3"
lazy_static = "1.4"
log = "0.4"
kube = { version = "0.78", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.17.0", features = ["v1_24"] }
sentry = "0.29"
serde_json = "1.0"
simple_logger = "4.0"
tokio = { version = "1.25", features = ["rt", "macros", "rt-multi-thread"] }
