[package]
name = "sentry-kubernetes"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
getopts = "0.2"
futures = "0.3"
lazy_static = "1.4"
libz-sys = { version = "1.1", features = ["static"] }
log = "0.4"
kube = { version = "0.84", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.18.0", features = ["v1_24"] }
serde_json = "1.0"
simple_logger = "4.0"
tokio = { version = "1.25", features = ["rt", "macros", "rt-multi-thread"] }

[dependencies.sentry]
version = "0.31"
default-features = false
features = [
    "anyhow",
    "backtrace",
    "contexts",
    "debug-images",
    "debug-logs",
    "log",
    "transport",
    "panic",
]
